--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.3.9",
+    "object-to-xml": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xml-to-json-promise": "0.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
