--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "element-ui": "^2.3.9",
+    "element-ui": "^2.4.8",
+    "mint-ui": "^2.2.13",
     "object-to-xml": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
@@ -29,7 +30,9 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-import": "^1.10.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
